<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_shopping_list"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.se491.chef_ly.activity.nav_activities.ShoppingListActivity">
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <ListView
        android:id="@android:id/list"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:background="@color/table_color1"
        android:layout_margin="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
...
        android:layout_below="@id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>
    <Button
        android:id="@+id/addBtn"
        android:text="@string/plus"
        android:layout_marginStart="20dp"
        android:textColor="#16C916"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="30dp"
...
        android:layout_below="@android:id/list"
        android:shadowColor="#fdffdf"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5" />
    <Button
        android:id="@+id/clearPurchasedBtn"
        android:text="@string/clearPurchased"
        android:background="@color/table_color2"
        android:layout_gravity="start"
        android:padding="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
...
