...
            android:id="@+id/contact_us"
            android:icon="@drawable/com_auth0_lock_ic_email"
            android:title="Contact Us" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/logout"
            android:title="Log Out" />

        <!--
        <item
            android:id="@+id/nav_create_recipe"
            android:icon="@drawable/pencil"
            android:title="Create new recipe" />
...
